@@ -1,5 +1,10 @@
 2008-06-22  Laurent Debacker <debackerl@gmail.com> 
 
+	* Theme.cs: Title bar's background is not compliant
+	* Ribbon.cs: Fix title bar layout code
+
+2008-06-22  Laurent Debacker <debackerl@gmail.com> 
+
 	* Theme.cs: Implementation of the required drop shadow for the app button
 
 2008-06-22  Laurent Debacker <debackerl@gmail.com> 
